refactor: use Integer.valueOf instead of constructor